@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4HitsModel.icc,v 1.5 2001-07-11 10:09:21 gunter Exp $
+// $Id: G4HitsModel.icc,v 1.6 2001-08-24 20:36:14 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 
 inline G4String G4HitsModel::GetCurrentTag () const {
@@ -30,8 +30,4 @@ inline G4String G4HitsModel::GetCurrentTag () const {
 
 inline G4String G4HitsModel::GetCurrentDescription () const {
   return fGlobalDescription;
-}
-
-inline G4bool G4HitsModel::Validate () {
-  return true;
 }
