@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4TextModel.hh,v 1.3 2001-07-22 00:57:13 johna Exp $
+// $Id: G4TextModel.hh,v 1.4 2001-08-24 20:36:21 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -57,9 +57,6 @@ public: // With description
 
   virtual G4String GetCurrentTag () const;
   // A tag which depends on the current state of the model.
-
-  virtual G4bool Validate ();
-  // Validate, but allow internal changes (hence non-const function).
 
 private:
 
