@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4NullModel.cc,v 1.5 2001-07-22 00:57:06 johna Exp $
+// $Id: G4NullModel.cc,v 1.6 2001-08-24 20:36:28 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -38,8 +38,4 @@ G4NullModel::~G4NullModel () {}
 
 void G4NullModel::DescribeYourselfTo (G4VGraphicsScene& sceneHandler) {
   G4Exception ("G4NullModel::DescribeYourselfTo called.");
-}
-
-G4bool G4NullModel::Validate () {
-  return true;
 }
