@@ -1,4 +1,4 @@
-$Id: History,v 1.15 2001-08-14 18:43:27 johna Exp $
+$Id: History,v 1.16 2001-08-24 20:36:11 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -19,6 +19,12 @@ committal in the CVS repository !
 
 History file for visualization/modeling
 ---------------------------------------
+
+24th August 2001  John Allison  (vis-V03-02-13)
+- Intoduced argument for printing in G4VModel::Validate(G4bool warn).
+- Changed default return value in G4VModel::Validate(G4bool) to true.
+- Invoke CalculateExtent after successful geometry change in
+  G4PhysicalVolumeModel::Validate, and other bug fixes..
 
 14th August 2001  John Allison  (vis-V03-02-11)
 - Added sceneHandler.Begin/EndPrimitives messages to models (long
